Removed unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ index.html:Zone.Identifier
 preview.jpg:Zone.Identifier
 style-guide.md:Zone.Identifier
 style-guide.md
+.gitignore:Zone.Identifier
