Removed unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ preview.jpg:Zone.Identifier
 style-guide.md:Zone.Identifier
 style-guide.md
 .gitignore:Zone.Identifier
+images/favicon-32x32.png:Zone.Identifier
+images/icon-dollar.svg:Zone.Identifier
+images/icon-person.svg:Zone.Identifier
+images/logo.svg:Zone.Identifier
